# glyphic

./: CHANGELOG.md  README.md  RELEASE_NOTES.md  index.html  package.json
.github/workflows/: release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs  pty.rs
src-tauri/src/commands/: budget.rs  context_engine.rs  git.rs  hooks.rs  instructions.rs  maintenance.rs  mcp.rs  mod.rs  pipelines.rs  plugins.rs  projects.rs  rules.rs  scheduler.rs  sessions.rs  skills.rs  stats.rs  token_savings.rs
src-tauri/src/ctx/: db.rs  hook.rs  virtualize.rs
src-tauri/src/filter/: builtin.rs  mod.rs  pipeline.rs  tracker.rs
src/lib/components/analytics/: AnalyticsPage.svelte
src/lib/components/context-engine/: ContextEnginePage.svelte
src/lib/components/dashboard/: DashboardPage.svelte
src/lib/components/hooks/: HooksPage.svelte
src/lib/components/instructions/: InstructionsPage.svelte
src/lib/components/layout/: Header.svelte  Sidebar.svelte
src/lib/components/mcp/: McpPage.svelte
src/lib/components/memory/: MemoryPage.svelte
src/lib/components/pipelines/: PipelineCanvas.svelte  PipelinesPage.svelte
src/lib/components/plugins/: PluginsPage.svelte
src/lib/components/rules/: RulesPage.svelte
src/lib/components/sessions/: SessionsPage.svelte
src/lib/stores/: navigation.svelte.ts
src/lib/tauri/: commands.ts
src/lib/types/: index.ts  settings.ts  token-savings.ts
src/lib/utils/: format.ts
(+5 files in other folders)
