[package]
name = "claude-code-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "claude_code_ui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
glob = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
